werk-parser/tests/fail/default_invalid_value.txt
error[P1001]: parse error
 --> INPUT:1:18
  |
1 | default target = hello
  |                  ^ expected string literal
